--- a/index.html
+++ b/index.html
@@ -101,17 +101,17 @@
           ssvWidget.setRiveMainArtboard('sixtyseconds-main-artboard')
 
           ssvWidget.setVideoUrls(
-            'https://res.cloudinary.com/sixty-seconds/video/upload/v1755004753/2025%20Rive%20Projects/25080%20-%20Aleto%20Foundation/Aleto-Creative_01-VER9_VC.mp4',
-            'https://app-rendered-video-playouts-dev.s3.eu-west-2.amazonaws.com/c9f55bdb759a64b4866c71a2e6afe29e.mp4',
-            'https://res.cloudinary.com/sixty-seconds/video/upload/v1755004753/2025%20Rive%20Projects/25080%20-%20Aleto%20Foundation/Aleto-Creative_01-VER9_VC.mp4'
+            'https://res.cloudinary.com/sixty-seconds/video/upload/v1765360950/2025%20Rive%20Projects/25090%20-%20Quake%20Global/Quake-04/Quake_04-01_V5.mp4',
+            'https://res.cloudinary.com/sixty-seconds/video/upload/v1765793770/2025%20Rive%20Projects/25090%20-%20Quake%20Global/Quake-04/Quake_04-02_V5.mp4',
+            'https://res.cloudinary.com/sixty-seconds/video/upload/v1765362877/2025%20Rive%20Projects/25090%20-%20Quake%20Global/Quake-04/Quake_04-03_V5.mp4'
           )
 
-          ssvWidget.setRiveUrl('https://res.cloudinary.com/sixty-seconds/raw/authenticated/s--QZVuraqX--/v1759138189/2025%20Rive%20Projects/25091%20-%20ACS%20Creative/acs_interactive_portfolio_V2.riv')
-          ssvWidget.setAudioDefaultUrl('https://res.cloudinary.com/sixty-seconds/video/upload/v1754659414/2025%20Rive%20Projects/25080%20-%20Aleto%20Foundation/aleto_01_default_audio.mp3')
+          ssvWidget.setRiveUrl('https://res.cloudinary.com/sixty-seconds/raw/authenticated/s--NV67Ri9k--/v1767088249/2025%20Rive%20Projects/25090%20-%20Quake%20Global/Quake-04/Quake-04-non-personalised-v2.riv')
+          ssvWidget.setAudioDefaultUrl('https://res.cloudinary.com/sixty-seconds/video/upload/v1765987302/2025%20Rive%20Projects/25090%20-%20Quake%20Global/Quake-04/Empty_audio.mp3')
           ssvWidget.setAudioBackgroundUrl('')
           ssvWidget.setAudioCustomBaseUrl('https://make-com-assets.s3.eu-west-2.amazonaws.com/rive-audio/IQPC-Jenny-Names/');
           ssvWidget.setAudioCustomGenerateUrl('https://hook.eu1.make.com/edjhztjzhr7gd3t61nbrqombgx9l9tny?Name-Tag1={customAudioValue}&FullString={customAudioValue}');
-          ssvWidget.setRiveOpenLinkUrl('https://calendar.app.google/dtt634K9PxjY9cw96')
+          ssvWidget.setRiveOpenLinkUrl('https://www.quakeglobal.com')
 
 
           ssvWidget.construct()
@@ -119,3 +119,4 @@
       </script>
 </body>
 </html>
+
